--- a/AppBuilderAlone/App.razor
+++ b/AppBuilderAlone/App.razor
@@ -1,5 +1,6 @@
-<Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="@(new List<System.Reflection.Assembly> { typeof(Output.__RazorOutput).Assembly })">
+<Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="@(new List<System.Reflection.Assembly> { typeof(AppBuilder.Output.__RazorOutput).Assembly })">
     <Found Context="routeData">
+        @*<AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(DefaultLayout)" />*@
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(DefaultLayout)" />
     </Found>
     <NotFound>
