--- a/AppBuilderAlone/_Imports.razor
+++ b/AppBuilderAlone/_Imports.razor
@@ -5,9 +5,14 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
-@using AppBuilderAlone
-@using AppBuilderAlone.Shared
+@using AppBuilder.Client.Shared
+@using AppBuilder.Client.Components
+@using AppBuilder.Client.Components.RazorProject
+@using AppBuilder.Shared
 @using BlazorMonaco
 @using BlazorMonaco.Bridge
-@using CompileRazor
+@using MatBlazor
+@using Faso.Blazor.SpinKit
+@using Blazor.ModalDialog
