--- a/AppBuilderAlone/Pages/Index.razor
+++ b/AppBuilderAlone/Pages/Index.razor
@@ -1,7 +1,48 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<MatTabGroup>
+    <MatTab Label="Home">
+        <MatH1>App Builder</MatH1>
+        @*<MatButton OnClick="DownloadRepo" Label="Download Repo"></MatButton>*@
+        <UploadProject OnProjectFileUpload="HandleProjectUpload" />
+        @*<div style="margin-top:15rem; margin-right:auto;margin-right:auto">
+            <MatButtonLink Href="/console"><MatH6>Console App</MatH6> </MatButtonLink>
+            <hr />
+            <MatButtonLink Href="/razorHome"><MatH6>Razor App</MatH6> </MatButtonLink>
+        </div>*@
+        <div class="mat-layout-grid">
+            <div class="mat-layout-grid-inner">
+                @if (ExtractedFiles != null)
+                {
+                    @foreach (var file in ExtractedFiles)
+                    {
+                        <div class="mat-layout-grid-cell mat-layout-grid-cell-span-4">
+                            <div class="grid-card mat-elevation-z24">
+                                <div class="header">
 
-Welcome to your new app.
+                                    @file.Name
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+                                </div>
+                                <div class="gridbody">
+                                    <pre>@file.Content</pre>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                }
+
+
+            </div>
+        </div>
+    </MatTab>
+    <MatTab Label="Console Project">
+        <MatButton OnClick="ShowMenu" Icon="menu">Menu</MatButton>
+        <ConsoleHome />
+    </MatTab>
+    <MatTab Label="Blazor/Razor Project">
+        <MatButton OnClick="ShowMenu" Icon="menu">Menu</MatButton>
+        <RazorCodeHome />
+    </MatTab>
+</MatTabGroup>
+
+
