--- a/AppBuilderAlone/wwwroot/css/app.css
+++ b/AppBuilderAlone/wwwroot/css/app.css
@@ -48,3 +48,35 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+.modal-dialog-githubform {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    background-color: #fff;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    padding: 1rem;
+    box-shadow: 0 2px 2px rgba(0,0,0,.25);
+    max-height: 99vh;
+    max-width: 85vw;
+}
+.modal-dialog-appMenu {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    background-color: #fff;
+    border-radius: 4px;
+    border: 1px solid #fff;
+    padding: 1rem;
+    box-shadow: 0 2px 2px rgba(0,0,0,.25);
+    max-height: 99vh;
+    max-width: 35vw;
+}
+.small-modal {
+    background-color: lightgray;
+    height: auto;
+    width: auto;
+    padding: 5px 10px 5px 10px
+}
