Add Auth state, resolve other issues

--- a/AppBuilderAlone/Components/UploadProject.razor
+++ b/AppBuilderAlone/Components/UploadProject.razor
@@ -1,5 +1,5 @@
 ﻿@inject ZipService ZipService
-    <div class="drag-drop-zone">
+    <div class="drag-drop-zone mat-elevation-z12">
         <MatH6>Upload Project Zip</MatH6>
         <InputFile OnChange="OnInputFileChange" accept=".zip" />
     </div>
