--- a/AppBuilderAlone/Components/UploadProject.razor.css
+++ b/AppBuilderAlone/Components/UploadProject.razor.css
@@ -24,14 +24,15 @@
     }
 
 .drag-drop-zone {
-    border: 3px dashed #e68710;
-    padding: 3rem;
+    border: 3px dashed black;
+    padding: 3.5rem 3rem 2.5rem 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #eee;
+    background-color: #6200ee;
+    border-radius:4px;
     box-shadow: inset 0 0 8px rgba(0,0,0,0.2);
-    color: #aeaeae;
+    color: white;
     font-size: 1.5rem;
     cursor: pointer;
     margin: 1.5rem 0 2rem 0;
@@ -39,7 +40,7 @@
 }
 
     .drag-drop-zone:hover {
-        background-color: #f5f5f5;
+        background-color: #0400ba;
     }
 
 ::deep.drag-drop-zone > input[type=file] {
