--- a/AppBuilderAlone/_Imports.razor
+++ b/AppBuilderAlone/_Imports.razor
@@ -11,6 +11,8 @@
 @using AppBuilder.Client.Components
 @using AppBuilder.Client.Components.RazorProject
 @using AppBuilder.Shared
+@using AppBuilder.CompileRazor
+@using AppBuilder.CompileConsole
 @using BlazorMonaco
 @using BlazorMonaco.Bridge
 @using MatBlazor
