--- a/AppBuilderAlone/wwwroot/css/app.css
+++ b/AppBuilderAlone/wwwroot/css/app.css
@@ -80,3 +80,38 @@ a, .btn-link {
     width: auto;
     padding: 5px 10px 5px 10px
 }
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Press+Start+2P&display=swap');
+.loader {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #000;
+}
+
+    .loader > p {
+        position: relative;
+        font-family: 'Permanent Marker', cursive;
+        text-transform: uppercase;
+        font-size: 4em;
+        letter-spacing: 4px;
+        overflow: hidden;
+        background: linear-gradient(90deg, #000, #fff, #000);
+        background-repeat: no-repeat;
+        background-size: 80%;
+        animation: animate 3s linear infinite;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: rgba(255, 255, 255, 0);
+    }
+
+@keyframes animate {
+    0% {
+        background-position: -500%;
+    }
+
+    100% {
+        background-position: 500%;
+    }
+}
