--- a/AppBuilderAlone/App.razor
+++ b/AppBuilderAlone/App.razor
@@ -1,11 +1,21 @@
-<Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="@(new List<System.Reflection.Assembly> { typeof(AppBuilder.Output.__RazorOutput).Assembly })">
-    <Found Context="routeData">
-        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(DefaultLayout)" />
-        @*<RouteView RouteData="@routeData" DefaultLayout="@typeof(DefaultLayout)" />*@
-    </Found>
-    <NotFound>
-        <LayoutView Layout="@typeof(DefaultLayout)">
-            <p>Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+<MatThemeProvider Theme="theme">
+    <Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="@(new List<System.Reflection.Assembly> { typeof(AppBuilder.Output.__RazorOutput).Assembly })">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(DefaultLayout)" />
+            @*<RouteView RouteData="@routeData" DefaultLayout="@typeof(DefaultLayout)" />*@
+        </Found>
+        <NotFound>
+            <LayoutView Layout="@typeof(DefaultLayout)">
+                <p>Sorry, there's nothing at this address.</p>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</MatThemeProvider>
+@code{
+    readonly MatTheme theme = new MatTheme()
+    {
+        Primary = "#000a12",
+        Surface = "#263238",
+        Secondary = "#4f5b62",
+    };
+}
