--- a/AppBuilderAlone/Components/UploadProject.razor.css
+++ b/AppBuilderAlone/Components/UploadProject.razor.css
@@ -24,13 +24,13 @@
     }
 
 .drag-drop-zone {
-    border: 3px dashed black;
+    border: 3px solid black;
     padding: 3.5rem 3rem 2.5rem 3rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #6200ee;
-    border-radius:4px;
+    background-color: #000a12;
+    border-radius: 4px;
     box-shadow: inset 0 0 8px rgba(0,0,0,0.2);
     color: white;
     font-size: 1.5rem;
@@ -40,7 +40,7 @@
 }
 
     .drag-drop-zone:hover {
-        background-color: #0400ba;
+        background-color: #4f5b62;
     }
 
 ::deep.drag-drop-zone > input[type=file] {
