--- a/AppBuilderAlone/Pages/LoginProvider.razor
+++ b/AppBuilderAlone/Pages/LoginProvider.razor
@@ -19,7 +19,7 @@
 </div>
 @code {
 
-    private readonly Dictionary<string, string> providers = new Dictionary<string, string>
+    private readonly Dictionary<string, string> providers = new()
     {
         { "github", "GitHub" },
         { "twitter", "Twitter" },
