--- a/AppBuilderAlone/Shared/MainLayout.razor
+++ b/AppBuilderAlone/Shared/MainLayout.razor
@@ -1,17 +1,50 @@
 ﻿@inherits LayoutComponentBase
-
+    <ModalDialogContainer />
 <div class="page">
-    @*<div class="sidebar">
-        <NavMenu />
-    </div>*@
-
     <div class="main">
-        <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
-        </div>
-
+       
+            <MatAppBarContainer>
+                <MatAppBar Class="mat-elevation-z12" Fixed="true" Style="position:sticky">
+                    <MatAppBarRow>
+                        <MatAppBarSection>
+                            <MatAppBarTitle Style="font-size:1.4em">App Builder - Build c# Console and Blazor Apps</MatAppBarTitle>
+                        </MatAppBarSection>
+                        <MatAppBarSection>
+                        </MatAppBarSection>
+                        <MatAppBarSection Align="@MatAppBarSectionAlign.End">
+                            <AuthorizeView>
+                                <Authorized>
+                                    <div style="margin-right:1rem">
+                                        Hello, @context.User.Identity.Name!
+                                        <a href="/.auth/logout?post_logout_redirect_uri=/" style="color: white"> Log out</a>
+                                    </div>
+                                </Authorized>
+                                <NotAuthorized>
+                                    <div style="margin-right:1rem">
+                                        <a href="/login-providers" style="color: white">Log in</a>
+                                    </div>
+                                </NotAuthorized>
+                            </AuthorizeView>
+                            <MatIconButton Style="margin-left:5px" Link="https://github.com/HillPhelmuth/MasterCSharp" Target="_blank">
+                                <i class="fa fa-github"></i>
+                            </MatIconButton>
+                        </MatAppBarSection>
+                    </MatAppBarRow>
+                </MatAppBar>
+            </MatAppBarContainer>
+       
         <div class="content px-4">
             @Body
         </div>
     </div>
 </div>
+@code {
+
+    readonly MatTheme theme = new MatTheme()
+    {
+        Primary = "#650000",
+        Surface = "#650000",
+        Secondary = "#4c3c20",
+    };
+}
+
