--- a/AppBuilderAlone/Components/UploadProject.razor
+++ b/AppBuilderAlone/Components/UploadProject.razor
@@ -1,13 +1,12 @@
 ﻿@inject ZipService ZipService
-    <div class="drag-drop-zone mat-elevation-z12">
+@inject AppState AppState
+    <div class="drag-drop-zone mat-elevation-z12" style="background-color:@(AppState.ThemeColor ?? "#87000")">
         <MatH6>Upload Project Zip</MatH6>
         <InputFile OnChange="OnInputFileChange" accept=".zip" />
     </div>
 
     @code {
-
-        [CascadingParameter(Name = "AppState")]
-        public AppState AppState { get; set; }
+        
         [Parameter]
         public EventCallback<List<ProjectFile>> OnProjectFileUpload { get; set; }
         [Parameter]
@@ -22,6 +21,13 @@
             var project = new UserProject {Name = projectName.Replace(".zip", string.Empty), Files = projectFiles};
             await OnProjectFileUpload.InvokeAsync(projectFiles);
             await OnProjectUpload.InvokeAsync(project);
+        }
+
+        protected override Task OnAfterRenderAsync(bool firstRender)
+        {
+            if (!firstRender)
+                Console.WriteLine("UploadProject.razor renders");
+            return base.OnAfterRenderAsync(firstRender);
         }
 
     }
