--- a/AppBuilderAlone/Pages/RazorCodeHome.razor
+++ b/AppBuilderAlone/Pages/RazorCodeHome.razor
@@ -39,7 +39,7 @@
                     <SpinKitFadingCircle />
                     <hr />
                 }
-                <iframe style="height: 500px; width: 100%" id="user-page-window" src="/defaultOutput"></iframe>
+                <iframe style="height: 500px; width: 100%" id="user-page-window" src="@iframeSrc"></iframe>
 
             </div>
             <div id="user-page-window-container" class="mat-layout-grid-cell mat-layout-grid-cell-span-6">
