--- a/AppBuilderAlone/Pages/RazorCodeHome.razor
+++ b/AppBuilderAlone/Pages/RazorCodeHome.razor
@@ -39,6 +39,7 @@
                     <SpinKitFadingCircle />
                     <hr />
                 }
+                <MatButton Style="float:right" OnClick="SetFullScreen">Full Screen</MatButton>
                 <iframe style="height: 500px; width: 100%" id="user-page-window" src="@iframeSrc"></iframe>
 
             </div>
