--- a/AppBuilderAlone/wwwroot/css/app.css
+++ b/AppBuilderAlone/wwwroot/css/app.css
@@ -55,7 +55,7 @@ a, .btn-link {
     height: auto;
     background-color: #fff;
     border-radius: 4px;
-    border: 1px solid #fff;
+    border: 1px solid #870000;
     padding: 1rem;
     box-shadow: 0 2px 2px rgba(0,0,0,.25);
     max-height: 99vh;
@@ -68,11 +68,22 @@ a, .btn-link {
     height: auto;
     background-color: #fff;
     border-radius: 4px;
-    border: 1px solid #fff;
+    border: 1px solid #870000;
     padding: 1rem;
     box-shadow: 0 2px 2px rgba(0,0,0,.25);
     max-height: 99vh;
     max-width: 35vw;
+}
+.modal-dialog-output {
+   
+    width: 95vw;
+    height: 99vh;
+    background-color: #fff;
+    border-radius: 4px;
+    border: 1px solid #870000;
+    padding: .25rem;
+    box-shadow: 0 2px 2px rgba(0,0,0,.25);
+    
 }
 .small-modal {
     background-color: lightgray;
