Remove Online check from Mainlayout, add to Index

--- a/AppBuilderAlone/Pages/Index.razor
+++ b/AppBuilderAlone/Pages/Index.razor
@@ -1,6 +1,9 @@
 ﻿@page "/"
 @layout MainLayout
-
+@if (!AppState.IsOnline)
+{
+    <MatH3>You are currently offline</MatH3>
+}
 <MatTabGroup>
     <MatTab Label="Home">
         <MatH2 Class="text-center">App Builder</MatH2>
