--- a/AppBuilderAlone/Components/RazorProject/RazorSamplesModal.razor
+++ b/AppBuilderAlone/Components/RazorProject/RazorSamplesModal.razor
@@ -1,4 +1,4 @@
 ﻿
-<div class="mat-elevation-z22" style="margin-left:6vw; margin-right: 6vw; height:90vh; width: 75vw; max-height:90vh; overflow-y: scroll; overflow-x:auto">
+<div class="mat-elevation-z22 fullscreen-output">
     <iframe style="height:100%;width:100%" src="@RazorConstants.MainComponentPagePath"></iframe>
 </div>
