--- a/AppBuilderAlone/Components/UploadProject.razor
+++ b/AppBuilderAlone/Components/UploadProject.razor
@@ -1,17 +1,18 @@
 ﻿@inject ZipService ZipService
 @inject AppState AppState
     <div class="drag-drop-zone mat-elevation-z12" style="background-color:@(AppState.ThemeColor ?? "#87000")">
-        <MatH6>Upload Project Zip</MatH6>
-        <InputFile OnChange="OnInputFileChange" accept=".zip" />
+        <label for="getfile"> <MatH6>Upload Project Zip</MatH6></label>
+        <InputFile AdditionalAttributes="attributes" OnChange="OnInputFileChange" accept=".zip" />
     </div>
 
     @code {
-        
+
         [Parameter]
         public EventCallback<List<ProjectFile>> OnProjectFileUpload { get; set; }
         [Parameter]
         public EventCallback<UserProject> OnProjectUpload { get; set; }
 
+        private Dictionary<string, object> attributes = new() {{"id", "getfile"}};
         private async Task OnInputFileChange(InputFileChangeEventArgs e)
         {
             var projectName = e.File.Name;
